[package]
authors = ["yuanxing2002@163.com"]
description = "cron macro"
documentation = "https://docs.rs/cron_macro/0.1.4/cron_macro/"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cron_macro"
repository = "https://github.com/wing-zacharias/cron_macro.git"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cron_macro_codegen = {version = "0.1.4"}
